--- a/css/style.css
+++ b/css/style.css
@@ -56,14 +56,22 @@ body main {
   justify-content: space-between;
 }
 .vitrine {
-  width: 800px;
+  width: 820px;
+}
+.lista_de_produtos {
+  max-width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 .img_produto {
   display: flex;
   justify-content: center;
 }
+
 .produto {
-  width: 250px;
+  width: 260px;
+  height: 430px;
   background-color: #f5f5f5;
   flex-direction: column;
   border-radius: 20px 20px 0 0;
@@ -82,7 +90,7 @@ body main {
   margin: 0 auto;
 }
 .conteudo_produto h1 {
-  height: 35px;
+  height: 20px;
   font-weight: bold;
   color: #333333;
   margin: 20px 0;
@@ -103,7 +111,7 @@ body main {
   font-size: 14px;
   height: 100px;
   line-height: 20px;
-  margin: 20px 0;
+  margin: 20px 0 0;
 }
 .conteudo_produto strong {
   color: #37268c;
@@ -120,16 +128,11 @@ body main {
 .add_ao_carrinho {
   margin: 20px 0;
 }
-.lista_de_produtos {
-  max-width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 15px;
-}
+
 .asside {
   display: flex;
   justify-content: flex-end;
-  max-width: 400px;
+  max-width: 380px;
   width: 100%;
 }
 .secao_lateral {
@@ -233,7 +236,44 @@ input {
 }
 .roda_pe {
   margin-top: 50px;
-  height: 200px;
-  background-color: #ffffff;
+  height: 250px;
   box-shadow: 0px 5px 30px -10px #00000048;
+}
+.titulo_roda_pe h1{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  color: #333333;
+  font-size: 28px;
+  font-weight: bold;
+}
+.newletter{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.newletter h3{
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.newletter input{
+  background-color: #f5f5f5;
+  height: 30px;
+  width: 200px;
+  margin: 10px 0;
+  border-radius: 15px;
+  
+}
+.newletter button{
+  cursor: pointer;
+  border: none;
+  background-color: #37268c;
+  color: #ffffff;
+  height: 30px;
+  width: 90px;
+  border-radius: 15px;
+  margin-bottom: 20px;
 }
